// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input default 1`] = `
.c0 {
  border: 1px solid #D1D1D1;
  border-radius: 5px;
  height: 30px;
  padding: 5px;
  min-width: 350px;
}

<input
  className="c0"
  id="default"
  label="default"
  type="text"
/>
`;

exports[`Input monetary 1`] = `
.c0 {
  border: 1px solid #D1D1D1;
  border-radius: 5px;
  height: 30px;
  padding: 5px;
  min-width: 350px;
}

<input
  className="c0"
  id="value"
  label="money related"
  type="text"
/>
`;
